Fix icon alignment in iPad

--- a/style/client.css
+++ b/style/client.css
@@ -95,6 +95,7 @@ body {
 	height: 21px;
 	width: 23px;
 	font-size: 14px;
+	text-align: center;
 	padding: 0;
 }
 
